# kubernetes-test-service

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  postgres.yaml  pyproject.toml  test.txt  test2.txt  test3.txt  web.yaml
kubernetes/: postgres.yaml  web.yaml
