[tool.poetry]
name = "kubernetes-test-service"
version = "0.1.0"
description = ""
authors = ["ullyzian <aviev2000@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8.3"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
